--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 title: Minimal theme
 logo: /assets/img/logo.png
-description: 
-esta es la primera pagina que hago. es muy divertido
+description: h
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
